Откорректировал запрос ближайших станций
